--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["php82", "php82Extensions.mbstring", "php82Extensions.pdo", "php82Extensions.pdo_mysql", "nginx", "nodejs"]
 
 [phases.build]
-cmds = ["mkdir -p /app/lang && chmod -R 777 /app/lang"]
+cmds = ["chmod +x start.sh"]
 
 [start]
-cmd = "mkdir -p /app/lang && chmod -R 777 /app/lang && nginx -g 'daemon off;'"
+cmd = "./start.sh"
