--- a/nginx.conf
+++ b/nginx.conf
@@ -7,9 +7,18 @@ events {
 }
 
 http {
-    include /etc/nginx/mime.types;
     default_type application/octet-stream;
     access_log /dev/stdout;
+    
+    types {
+        text/html html htm;
+        text/css css;
+        text/javascript js;
+        application/json json;
+        image/jpeg jpg jpeg;
+        image/png png;
+        image/gif gif;
+    }
     
     client_body_temp_path /tmp/client_body;
     proxy_temp_path /tmp/proxy;
@@ -28,7 +37,7 @@ http {
             fastcgi_pass 127.0.0.1:9000;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            include /etc/nginx/fastcgi_params;
+            include /app/fastcgi_params;
         }
     }
 }
