--- a/php-fpm.conf
+++ b/php-fpm.conf
@@ -1,7 +1,12 @@
 [global]
 error_log = /dev/stderr
+daemonize = no
 
 [www]
+; CES DEUX LIGNES SONT OBLIGATOIRES
+user = www-data
+group = www-data
+
 listen = 127.0.0.1:9000
 pm = dynamic
 pm.max_children = 5
@@ -9,3 +14,6 @@ pm.start_servers = 2
 pm.min_spare_servers = 1
 pm.max_spare_servers = 3
 catch_workers_output = yes
+access.log = /dev/stdout
+
+
