--- a/nginx.conf
+++ b/nginx.conf
@@ -52,6 +52,7 @@ fastcgi_param  REMOTE_PORT        $remote_port;
 fastcgi_param  SERVER_ADDR        $server_addr;
 fastcgi_param  SERVER_PORT        $server_port;
 fastcgi_param  SERVER_NAME        $server_name;
+fastcgi_param  HTTPS 'on';
         }
     }
 }
